--- a/front/package.json
+++ b/front/package.json
@@ -32,6 +32,7 @@
         "webpack-stream": "^5.1.1"
     },
     "dependencies": {
+        "jcf": "^1.2.3",
         "js-cookie": "^2.2.0",
         "normalize.css": "^8.0.0",
         "npm": "^6.4.1",
